RESOLVED FIXED272222
Fix incorrect EGL function type definitions in PlatformDisplay
https://bugs.webkit.org/show_bug.cgi?id=272222
Summary Fix incorrect EGL function type definitions in PlatformDisplay
Adrian Perez
Reported 2024-04-05 06:47:53 PDT
The “Source/WebCore/platform/graphics/PlatformDisplay.cpp” contains a few definitions of EGL extension function types (PFN??PROC) which look like this: #if !defined(PFNEGLDESTROYIMAGEPROC) typedef EGLBoolean (*PFNEGLDESTROYIMAGEPROC) (EGLDisplay, EGLImage); #endif #if !defined(PFNEGLCREATEIMAGEKHRPROC) typedef EGLImageKHR (*PFNEGLCREATEIMAGEKHRPROC) (EGLDisplay, EGLContext, EGLenum target, EGLClientBuffer, const EGLint* attribList); #endif These are missing usage of the “EGLAPIENTRYP” macro. Also, the PFN??PROC are type definitions and not macros in the EGL headers so these will be always defined even if already present, instead we should gate their definition either on the extension name macro i.e. defined(EGL_KHR_image_base), or on the EGL version macro i.e. defined(EGL_VERSION_1_5). With the outlined changes then the definitions would compliant with the EGL specifications, and coherent with what is done elsewhere in WebKit.
Attachments
Adrian Perez
Comment 1 2024-04-05 06:53:39 PDT
EWS
Comment 2 2024-04-08 03:06:39 PDT
Committed 277192@main (91f787886ac5): <https://commits.webkit.org/277192@main> Reviewed commits have been landed. Closing PR #26901 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-08 03:07:12 PDT
Note You need to log in before you can comment on or make changes to this bug.