Fix incorrect EGL function type definitions in PlatformDisplay https://bugs.webkit.org/show_bug.cgi?id=272222

Reviewed by Carlos Garcia Campos.

* Source/WebCore/platform/graphics/PlatformDisplay.cpp: Use EGLAPIENTRYP
  to mark EGL function type definitions and use the extension name and
  EGL version macros to guard their definition.

Canonical link: https://commits.webkit.org/277192@main